--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <script src="save.js"></script>
 <head>
     <style>
         body {
@@ -47,7 +48,7 @@
 
             $("#user_agent").text(navigator.userAgent);
         });
-    </script>
+    </script>h
 </body>
 </html>
 <h2>
