--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-    <script src="save.js"></script>
 <head>
     <style>
         body {
@@ -52,8 +51,8 @@
 </body>
 </html>
 <h2>
-    TacoTake
+    HEHE
 </h2>
 <h3>
-    Tacoamerman on github
+    Property of LucasTheOutclaw
 </h3>
